Sostituzione di ul con div

--- a/index.html
+++ b/index.html
@@ -9,29 +9,29 @@
 
     <div class="container">
 
-      <div class="">
-        <ul>
-          <img src="img/pd1.jpg" alt="">
-        </ul>
-        <ul>
-          <img src="img/pd2.jpg" alt="">
-        </ul>
-        <ul>
-          <img src="img/pd3.jpg" alt="">
-        </ul>
-      </div>
+      <section class="">
+        <div class="">
+          <img src="img/pd1.jpg" alt="ipad">
+        </div>
+        <div class="">
+          <img src="img/pd2.jpg"alt="smartphone">
+        </div>
+         <div class="">
+           <img src="img/pd3.jpg" alt="cuffie">
+         </div>
+      </section>
 
-      <div class="">
-        <ul>
-          <img src="img/pd1.jpg" alt="">
-        </ul>
-        <ul>
-          <img src="img/pd2.jpg" alt="">
-        </ul>
-        <ul>
-          <img src="img/pd3.jpg" alt="">
-        </ul>
-      </div>
+      <section class="">
+        <div class="">
+          <img src="img/pd1.jpg" alt="ipad">
+        </div>
+        <div class="">
+          <img src="img/pd2.jpg"alt="smartphone">
+        </div>
+         <div class="">
+           <img src="img/pd3.jpg" alt="cuffie">
+         </div>
+      </section>
 
     </div>
 
