--- a/index.html
+++ b/index.html
@@ -9,28 +9,34 @@
 
     <div class="container">
 
-      <section class="">
-        <div class="">
+      <section class="sezioni">
+        <div class="box">
+          <div class="trentapercento"></div>
           <img src="img/pd1.jpg" alt="ipad">
         </div>
-        <div class="">
+        <div class="box">
+          <div class="cinquepercento"></div>
           <img src="img/pd2.jpg"alt="smartphone">
         </div>
-         <div class="">
+         <div class="box">
+           <div class="trentapercento"></div>
            <img src="img/pd3.jpg" alt="cuffie">
          </div>
       </section>
 
-      <section class="">
-        <div class="">
+      <section class="sezioni">
+        <div class="box">
+          <div class="trentapercento"></div>
           <img src="img/pd1.jpg" alt="ipad">
         </div>
-        <div class="">
+        <div class="box">
+          <div class="cinquepercento"></div>
           <img src="img/pd2.jpg"alt="smartphone">
         </div>
-         <div class="">
-           <img src="img/pd3.jpg" alt="cuffie">
-         </div>
+        <div class="box">
+          <div class="trentapercento"></div>
+          <img src="img/pd3.jpg" alt="cuffie">
+        </div>
       </section>
 
     </div>
