Apparizione degli sconti

--- a/index.html
+++ b/index.html
@@ -11,30 +11,30 @@
 
       <section class="sezioni">
         <div class="box">
-          <div class="trentapercento"></div>
+          <div class="trentapercento">-30%</div>
           <img src="img/pd1.jpg" alt="ipad">
         </div>
         <div class="box">
-          <div class="cinquepercento"></div>
+          <div class="cinquepercento">-5%</div>
           <img src="img/pd2.jpg"alt="smartphone">
         </div>
          <div class="box">
-           <div class="trentapercento"></div>
+           <div class="trentapercento">-30%</div>
            <img src="img/pd3.jpg" alt="cuffie">
          </div>
       </section>
 
       <section class="sezioni">
         <div class="box">
-          <div class="trentapercento"></div>
+          <div class="trentapercento">-30%</div>
           <img src="img/pd1.jpg" alt="ipad">
         </div>
         <div class="box">
-          <div class="cinquepercento"></div>
+          <div class="cinquepercento">-5%</div>
           <img src="img/pd2.jpg"alt="smartphone">
         </div>
         <div class="box">
-          <div class="trentapercento"></div>
+          <div class="trentapercento">-30%</div>
           <img src="img/pd3.jpg" alt="cuffie">
         </div>
       </section>
