Sezioni rinominate in sezioneuno e sezionedue

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <div class="container">
 
-      <section class="sezioni">
+      <section class="sezioneuno">
         <div class="box">
           <div class="trentapercento">-30%</div>
           <img src="img/pd1.jpg" alt="ipad">
@@ -24,7 +24,7 @@
          </div>
       </section>
 
-      <section class="sezioni">
+      <section class="sezionedue">
         <div class="box">
           <div class="trentapercento">-30%</div>
           <img src="img/pd1.jpg" alt="ipad">
