--- a/index.html
+++ b/index.html
@@ -12,30 +12,30 @@
       <section class="sezioneuno">
         <div class="box">
           <div class="trentapercento">-30%</div>
-          <img src="img/pd1.jpg" alt="ipad">
+          <img class="img" src="img/pd1.jpg" alt="ipad">
         </div>
         <div class="box">
           <div class="cinquepercento">-5%</div>
-          <img src="img/pd2.jpg"alt="smartphone">
+          <img class="img" src="img/pd2.jpg"alt="smartphone">
         </div>
          <div class="box">
            <div class="trentapercento">-30%</div>
-           <img src="img/pd3.jpg" alt="cuffie">
+           <img class="img" src="img/pd3.jpg" alt="cuffie">
          </div>
       </section>
 
       <section class="sezionedue">
         <div class="box">
           <div class="trentapercento">-30%</div>
-          <img src="img/pd1.jpg" alt="ipad">
+          <img class="img" src="img/pd1.jpg" alt="ipad">
         </div>
         <div class="box">
           <div class="cinquepercento">-5%</div>
-          <img src="img/pd2.jpg"alt="smartphone">
+          <img class="img" src="img/pd2.jpg"alt="smartphone">
         </div>
         <div class="box">
           <div class="trentapercento">-30%</div>
-          <img src="img/pd3.jpg" alt="cuffie">
+          <img class="img" src="img/pd3.jpg" alt="cuffie">
         </div>
       </section>
 
